--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en" data-beasties-container><head><base href="/">
+<!DOCTYPE html><html lang="en" data-beasties-container><head><base href="/royal-bake/">
       <meta charset="UTF-8">
 
       <title>Restfood - HTML Template Restaurant</title>
