--- a/index.csr.html
+++ b/index.csr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-beasties-container="">
 
-   <head><base href="/royal-bake">
+   <head><base href="/">
       <meta charset="UTF-8">
 
       <title>Restfood - HTML Template Restaurant</title>
